--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,10 @@
     <listener-class>edu.cornell.mannlib.vitro.webapp.startup.StartupManager</listener-class>
   </listener>
 
+  <listener>
+    <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
+  </listener>
+
   <!-- TwelveMonkeys ImageIO listener -->
   <listener>
     <display-name>ImageIO service provider loader/unloader</display-name>
@@ -245,5 +249,10 @@
       <taglib-location>/WEB-INF/tlds/taglibs-string.tld</taglib-location>
     </taglib>
   </jsp-config>
+
+  <resource-env-ref>
+    <resource-env-ref-name>BeanManager</resource-env-ref-name>
+    <resource-env-ref-type>javax.enterprise.inject.spi.BeanManager</resource-env-ref-type>
+  </resource-env-ref>
 
 </web-app>
